--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header {
   top: 0;
   background-color: var(--whiteColor);
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 }
 
 nav {
@@ -692,9 +692,22 @@ footer .fas:hover {
     top:0;
     right: 0;
     background-color: var(--darkYellow);
-    z-index: 10;
-    width: 8-;
+    z-index: 1;
+    width: 80px;
+    height: 80px;
+    clip-path: polygon(0 0, 100% 100%, 100% 0);
+  }
 
+  .discount {
+    display: block;
+    color: var(--darkColor);
+    transform: rotate(45deg);
+    position: absolute;
+    top: 25px ;
+    right: 5px;
+    z-index: 2;
+    font-size: 0.8rem;
+    font-weight: bold;
   }
 
   .deals ul {
