Revert "Fix discount"

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
   --whiteColor: #fff;
   --gray: #898888;
   --yellow: #fd3;
-  --darkYellow: #f0c000;
   --red: #f42;
   --lightRed: #ffebe7;
   --lighterRed: #fffaf8;
@@ -32,7 +31,7 @@ header {
   top: 0;
   background-color: var(--whiteColor);
   width: 100%;
-  z-index: 10;
+  z-index: 1;
 }
 
 nav {
@@ -50,8 +49,7 @@ time,
 #third-box,
 #fourth-box,
 .white-hover,
-.black-hover,
-.discount {
+.black-hover {
   display: none;
 }
 
@@ -196,12 +194,11 @@ footer .fas {
   padding-bottom: 10px;
 }
 
-/* Latest funding  */
-
-.wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
+.highlights ul > li {
+  margin-right: 10px;
 }
+
+/* Latest funding  */
 
 .latest {
   padding: 10px;
@@ -294,204 +291,25 @@ footer .fas {
   color: var(--gray);
 }
 
-/* Category styling */
-
-.categories {
-  margin: 10px;
-}
-
-.categories img {
-  width: 96px;
-  height: 96px;
-  float: right;
-}
-
-.category {
-  flex-direction: column;
-  width: 100%;
-  color: var(--red);
-}
-
-.category h2 {
-  margin-bottom: 10px;
-}
-
-.top-category {
-  height: 400px;
-  width: 100%;
-  padding: 10px;
-  color: var(--whiteColor);
-  flex-direction: column;
-  justify-content: flex-end;
-  margin-bottom: 2px;
-  background-size: cover;
-  background-position: center;
-}
-
-.bg-1 {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/categories-1.jpg);
-}
-
-.bg-2 {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/categories-2.jpg);
-}
-
-.bg-3 {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/categories-3.jpg);
-}
-
-.top-category p {
-  font-size: 0.8rem;
-}
-
-.top-category li {
-  font-size: 0.7rem;
-  color: var(--gray);
-}
-
-.center-category {
-  background-color: var(--lighterRed);
-  padding-left: 10px;
-}
-
-.center-category p {
-  margin-top: 10px;
-  font-size: 0.7rem;
-  margin-bottom: 3px;
-}
-
-.center-category a {
-  color: var(--red);
-}
-
-.bottom-category {
-  margin-left: 20px;
-  margin-top: 10px;
-}
-
-.bottom-category li {
-  list-style: disc outside;
-  padding: 10px 0;
-  border-bottom: lightgray 1px solid;
-}
-
-.highlights ul > li {
-  margin-right: 10px;
-}
-
-.categories #second-category,
-.categories #third-category {
-  display: none;
-}
-
-.hover-underline {
-  color: var(--whiteColor);
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-
-/* Latest news styling  */
-
-.news {
-  flex-direction: column;
-  padding: 10px;
-}
-
-.news h2,
-.news .latest-heading {
-  color: var(--red);
-  margin: 20px 0;
-}
-
-.news img {
-  height: 60px;
-  width: 90px;
-}
-
-.sub-news {
-  flex-direction: row;
-  margin-bottom: 10px;
-}
-
-.sub-news h4 {
-  margin-top: 2px;
-  margin-bottom: 5px;
-  font-size: 0.8rem;
-  color: var(--darkColor);
-}
-
-.sub-news .wrapper {
-  flex-direction: column;
-  margin-left: 10px;
-}
-
-.sub-news ul {
-  font-size: 0.6rem;
-  color: var(--gray);
-}
-
-/* Latest deals  */
-
-.news .latest-heading {
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.news .latest-heading > p {
-  margin-top: 25px;
-  font-size: 0.8rem;
-}
-
-.deals ul {
-  color: var(--darkColor);
-  font-size: 0.8rem;
-}
-
-.strike-through {
-  text-decoration: line-through;
-  color: var(--gray);
-  font-size: 0.7rem;
-}
-
 /* Hover styling */
 
 .top-box:hover {
   cursor: pointer;
 }
 
-.black-hover a:hover {
-  color: var(--darkColor);
-}
-
 .highlights a:hover,
 .white-hover a:hover,
-.footer-links a:hover,
-.top-category li > a:hover {
+.footer-links a:hover {
   color: var(--whiteColor);
+}
+
+.black-hover a:hover {
+  color: var(--darkColor);
 }
 
 footer .fab:hover,
 footer .fas:hover {
   background-color: var(--darkColor);
-}
-
-.hover-underline:hover {
-  text-decoration: underline;
-  text-decoration-color: var(--gray);
-}
-
-.news h2:hover {
-  color: var(--darkColor);
-}
-
-.sub-news h4:hover,
-.center-category h5:hover {
-  color: var(--red);
-  text-decoration: underline;
-}
-
-.bottom-category li > a:hover {
-  color: var(--darkColor);
 }
 
 @media screen and (min-width: 600px) {
@@ -612,113 +430,6 @@ footer .fas:hover {
   #third-box {
     display: block;
   }
-
-  /* Categories styling */
-
-  .categories {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .category {
-    width: 49%;
-  }
-
-  .categories #second-category {
-    display: flex;
-  }
-
-  .top-category {
-    height: 240px;
-  }
-
-  .bottom-category li {
-    font-size: 0.7rem;
-  }
-
-  /* Latest news styling  */
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-  }
-
-  .sub-news {
-    flex-direction: column;
-  }
-
-  .sub-news h4 {
-    font-size: 0.6em;
-  }
-
-  .news img {
-    height: 110px;
-    width: 100%;
-  }
-
-  .sub-news .wrapper {
-    flex-direction: column;
-    margin-left: 0;
-    margin-top: 5px;
-  }
-
-  .sub-news ul {
-    font-size: 0.6rem;
-    color: var(--gray);
-  }
-
-  /* Latest deals  */
-
-   .sub-news .img-wrapper {
-    /* width: 100%;
-    height: 110px;
-    background-color: var(--darkYellow); */
-    position: relative;
-  }
-/*
-  .deals img {
-    clip-path: polygon(50% 0%, 100% 50%, 100% 100%, 0 100%, 0 0);
-  }
-
-  .discount {
-    display: block;
-    color: var(--darkColor);
-    position: absolute;
-    top: 15px;
-    right: 5px;
-    transform: rotate(30deg);
-    font-size: 0.8rem;
-    font-weight: bold;
-  } */
-
-  .triangle {
-    position:absolute;
-    top:0;
-    right: 0;
-    background-color: var(--darkYellow);
-    z-index: 1;
-    width: 80px;
-    height: 80px;
-    clip-path: polygon(0 0, 100% 100%, 100% 0);
-  }
-
-  .discount {
-    display: block;
-    color: var(--darkColor);
-    transform: rotate(45deg);
-    position: absolute;
-    top: 25px ;
-    right: 5px;
-    z-index: 2;
-    font-size: 0.8rem;
-    font-weight: bold;
-  }
-
-  .deals ul {
-    color: var(--darkColor);
-    font-size: 0.8rem;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -790,71 +501,4 @@ footer .fas:hover {
   #fourth-box {
     display: block;
   }
-
-  /* Categories styling */
-
-  .categories {
-    justify-content: space-between;
-  }
-
-  .category {
-    width: 32%;
-  }
-
-  .categories #third-category {
-    display: flex;
-  }
-
-  .top-category {
-    height: 240px;
-  }
-
-  .top-category h3 {
-    font-size: 1.1rem;
-  }
-
-  .center-category h5 {
-    font-size: 0.75rem;
-  }
-
-  .bottom-category li {
-    font-size: 0.7rem;
-  }
-
-  /* Latest news styling  */
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-  }
-
-  .sub-news h4 {
-    font-size: 0.7em;
-  }
-
-  .news img {
-    height: 130px;
-  }
-
-  /* Latest deals styling  */
-
-  /* .deals img {
-    clip-path: polygon(60% 0%, 100% 50%, 100% 100%, 0 100%, 0 0);
-  } */
-
-  .deals h4 {
-    margin-top: 20px;
-  }
-
-  /* .discount {
-    display: block;
-    color: var(--darkColor);
-    position: absolute;
-    top: 20px;
-    right: 5px;
-    transform: rotate(35deg);
-    font-size: 0.8rem;
-    font-weight: bold;
-  } */
 }
