--- a/style.css
+++ b/style.css
@@ -314,6 +314,7 @@ footer .fas {
 
 .category h2 {
   margin-bottom: 10px;
+  color: var(--red);
 }
 
 .top-category {
@@ -480,7 +481,10 @@ footer .fas:hover {
   text-decoration-color: var(--gray);
 }
 
-.news h2:hover {
+.news h2:hover,
+.categories h2:hover,
+.latest-heading h2:hover,
+.latest-heading a:hover {
   color: var(--darkColor);
 }
 
