add color variables

--- a/style.scss
+++ b/style.scss
@@ -11,3 +11,12 @@
 
 // Variabiles
 
+$darkColor: #000;
+$lightDarkColor: #131313;
+$whiteColor: #fff;
+$gray: #898888;
+$yellow: #fd3;
+$red: #f42;
+$lightRed: #ffebe7;
+$lighterRed: #fffaf8;
+$darkYellow: #f0c000;
