--- a/style.css
+++ b/style.css
@@ -84,4 +84,48 @@ main {
   margin: 0 10px;
 }
 
+footer {
+  background-color: var(--darkColor);
+}
+footer .bg-lighter {
+  background-color: var(--lightDarkColor);
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
+}
+footer .bg-lighter li {
+  font-size: 0.7rem;
+  margin: 25px 8px 8px 10px;
+}
+footer .fab,
+footer .fas {
+  width: 35px;
+  height: 35px;
+  padding: 10px;
+  font-size: 0.9rem;
+  color: var(--whiteColor);
+  background-color: #343434;
+  border: 2px solid #343434;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+footer .footer-logo {
+  justify-content: center;
+  padding: 30px;
+}
+footer .footer-logo a,
+footer .footer-logo img {
+  height: 0.6rem;
+  font-size: 0.6rem;
+}
+footer .footer-logo a .stackpath,
+footer .footer-logo img .stackpath {
+  color: var(--whiteColor);
+}
+footer .footer-logo p {
+  color: var(--gray);
+  font-size: 0.6rem;
+  margin: 0 5px;
+}
+
 /*# sourceMappingURL=style.css.map */
