--- a/style.css
+++ b/style.css
@@ -6,50 +6,43 @@
   list-style: none;
   font-family: Helvetica, Arial, sans-serif;
 }
-
-:root {
-  --darkColor: #000;
-  --lightDarkColor: #131313;
-  --whiteColor: #fff;
-  --gray: #898888;
-  --yellow: #fd3;
-  --red: #f42;
-  --lightRed: #ffebe7;
-  --lighterRed: #fffaf8;
-  --darkYellow: #f0c000;
+.background {
+  background-size: cover;
+  background-position: center;
 }
-
 a {
-  color: var(--gray);
+  color: #898888;
 }
-
 .flex {
   display: flex;
 }
-
 img {
   cursor: pointer;
 }
-
 header {
   position: fixed;
   top: 0;
-  background-color: var(--whiteColor);
+  background-color: #fff;
   width: 100%;
   z-index: 10;
 }
-
 nav {
   flex-direction: column;
 }
-
+nav .fas {
+  font-size: 0.9rem;
+  border-left: lightgray solid 1px;
+  padding: 15px;
+  height: 100%;
+  width: auto;
+}
+nav .fa-bars {
+  color: #f42;
+}
 main {
   margin-top: 90px;
 }
-
 /* Display none for mobile */
-.dark-nav,
-.highlights img,
 time,
 #third-box,
 #fourth-box,
@@ -58,770 +51,316 @@ time,
 .triangle {
   display: none;
 }
-
+.dark-nav {
+  display: none;
+}
 .dark-nav li {
   margin-right: 10px;
 }
-
-.white-nav li {
-  margin-right: 20px;
+@media screen and (min-width: 600px) {
+  .dark-nav {
+    display: flex;
+    background-color: #000;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-bottom: 5px;
+    padding-left: 10px;
+  }
 }
-
 .white-nav {
   justify-content: space-between;
 }
-
+.white-nav li {
+  margin-right: 20px;
+}
+@media screen and (min-width: 600px) {
+  .white-nav {
+    padding-left: 10px;
+  }
+}
 .logo-img {
   height: 50px;
   width: auto;
 }
-
+@media screen and (min-width: 600px) {
+  .logo-img {
+    display: none;
+  }
+}
 .yellow-nav {
-  background-color: var(--yellow);
+  background-color: #fd3;
   padding: 10px;
 }
-
 .yellow-nav a {
-  color: var(--darkColor);
+  color: #000;
   font-size: 0.6rem;
   margin: auto;
 }
-
+@media screen and (min-width: 600px) {
+  .yellow-nav a {
+    margin: 0;
+  }
+}
 .display-m {
   display: block;
 }
-
-.fa-bars {
-  color: var(--red);
-}
-
-nav .fas {
-  font-size: 0.9rem;
-  border-left: lightgray solid 1px;
-  padding: 15px;
-  height: 100%;
-  width: auto;
-}
-
 /* FOOTER STYLING */
-
 footer {
-  background-color: var(--darkColor);
+  background-color: #000;
 }
-
-.bg-lighter {
-  background-color: var(--lightDarkColor);
-  flex-direction: column;
-  align-items: center;
-  padding: 25px;
-}
-
-.bg-lighter li {
-  font-size: 0.7rem;
-  margin: 25px 8px 8px 10px;
-}
-
 footer .fab,
 footer .fas {
   width: 35px;
   height: 35px;
   padding: 10px;
   font-size: 0.9rem;
-  color: var(--whiteColor);
+  color: #fff;
   background-color: #343434;
   border: 2px solid #343434;
   border-radius: 50%;
   margin-right: 15px;
 }
-
-.footer-logo {
+footer .bg-lighter {
+  background-color: #131313;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
+}
+footer .bg-lighter li {
+  font-size: 0.7rem;
+  margin: 25px 8px 8px 10px;
+}
+footer .footer-logo {
   justify-content: center;
   padding: 30px;
 }
-
-.footer-logo a,
-.footer-logo img {
+footer .footer-logo a,
+footer .footer-logo img {
   height: 0.6rem;
   font-size: 0.6rem;
 }
-
-.footer-logo p {
-  color: var(--gray);
+footer .footer-logo p {
+  color: #898888;
   font-size: 0.6rem;
   margin: 0 5px;
 }
-
-.stackpath {
-  color: var(--whiteColor);
+footer .stackpath {
+  color: #fff;
 }
-
 /* HIGHLIGHTS STYLING */
-
 .highlights {
   flex-direction: column;
   height: 1000px;
   margin: 0 10px;
 }
-
+.highlights img {
+  display: none;
+}
+.highlights h1,
+.highlights h2 {
+  margin-bottom: 20px;
+  color: #fff;
+}
+.highlights li {
+  margin-right: 10px;
+}
+@media screen and (min-width: 600px) {
+  .highlights {
+    flex-direction: row;
+    height: 300px;
+    margin-top: 3px;
+  }
+  .highlights h1,
+  .highlights h2 {
+    margin-bottom: 5px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .highlights {
+    height: 550px;
+  }
+}
 .highlight,
 .sub-highlight {
   height: 300px;
   margin-bottom: 10px;
   flex-direction: column;
   justify-content: flex-end;
-  color: var(--whiteColor);
+  color: #fff;
   padding: 15px;
 }
-
-.opal {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/phone.jpeg);
-  background-size: cover;
-  background-position: center;
-}
-
-.google {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/account.jpeg);
-  background-size: cover;
-  background-position: center;
-}
-
-.mac {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/duplicate.png);
-  background-size: cover;
-  background-position: center;
-}
-
-.highlights h1,
-.highlights h2 {
-  margin-bottom: 20px;
-  color: var(--whiteColor);
-}
-
-.latest-heading li {
-  padding-bottom: 10px;
-}
-
-/* Latest funding  */
-
-.wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.latest {
-  padding: 10px;
-}
-
-.latest,
-.latest-heading {
-  flex-direction: column;
-}
-
-.latest-heading ul {
-  flex-direction: column-reverse;
-  margin-top: 10px;
-}
-
-.latest-heading a,
-.latest-heading h2 {
-  color: var(--red);
-}
-
-.box {
-  margin-bottom: 20px;
-}
-
-.top-box {
-  position: relative;
-  height: 100px;
-  background-color: var(--lightRed);
-}
-
-.top-box img {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-
-.top-box p {
-  padding-left: 70px;
-  color: var(--darkColor);
-}
-
-.top-box h4 {
-  padding: 10px 10px 10px 70px;
-  background-color: var(--red);
-  color: var(--whiteColor);
-}
-
-.top-box .value {
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin-top: 10px;
-  line-height: 1.4rem;
-}
-
-.top-box .series {
-  font-size: 0.7rem;
-  line-height: 1.2rem;
-  color: var(--gray);
-}
-
-.center-box {
-  padding: 10px;
-  flex-direction: column;
-  background-color: var(--lighterRed);
-}
-
-.center-box a {
-  font-size: 0.8rem;
-  padding: 7px 0;
-  color: var(--darkColor);
-}
-
-.bottom-box {
-  border-top: 1px solid rgba(255, 68, 34, 0.25);
-  background-color: var(--lighterRed);
-  padding: 10px;
-}
-
-.bottom-box a {
-  font-size: 0.8rem;
-}
-
-.bottom-box p {
-  color: var(--darkColor);
-}
-
-.bottom-box span {
-  color: var(--gray);
-}
-
-/* Category styling */
-
-.categories {
-  margin: 10px;
-}
-
-.categories img {
-  width: 96px;
-  height: 96px;
-  float: right;
-}
-
-.category {
-  flex-direction: column;
-  width: 100%;
-  color: var(--red);
-}
-
-.category h2 {
-  margin-bottom: 10px;
-  color: var(--red);
-}
-
-.top-category {
-  height: 400px;
-  width: 100%;
-  padding: 10px;
-  color: var(--whiteColor);
-  flex-direction: column;
-  justify-content: flex-end;
-  margin-bottom: 2px;
-  background-size: cover;
-  background-position: center;
-}
-
-.bg-1 {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/categories-1.jpg);
-}
-
-.bg-2 {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/categories-2.jpg);
-}
-
-.bg-3 {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 1)), url(images/categories-3.jpg);
-}
-
-.top-category p {
-  font-size: 0.8rem;
-}
-
-.top-category li {
-  font-size: 0.7rem;
-  color: var(--gray);
-}
-
-.center-category {
-  background-color: var(--lighterRed);
-  padding-left: 10px;
-}
-
-.center-category p {
-  margin-top: 10px;
-  font-size: 0.7rem;
-  margin-bottom: 3px;
-}
-
-.center-category a {
-  color: var(--red);
-}
-
-.bottom-category {
-  margin-left: 20px;
-  margin-top: 10px;
-}
-
-.bottom-category li {
-  list-style: disc outside;
-  padding: 10px 0;
-  border-bottom: lightgray 1px solid;
-}
-
-.highlights ul > li {
-  margin-right: 10px;
-}
-
-.categories #second-category,
-.categories #third-category {
-  display: none;
-}
-
-.hover-underline {
-  color: var(--whiteColor);
-  margin-bottom: 5px;
-  margin-top: 5px;
-}
-
-/* Latest news styling  */
-
-.news {
-  flex-direction: column;
-  padding: 10px;
-}
-
-.news h2,
-.news .latest-heading {
-  color: var(--red);
-  margin: 20px 0;
-}
-
-.news img {
-  height: 60px;
-  width: 90px;
-}
-
-.sub-news {
-  flex-direction: row;
-  margin-bottom: 10px;
-}
-
-.sub-news h4 {
-  margin-top: 2px;
-  margin-bottom: 5px;
-  font-size: 0.8rem;
-  color: var(--darkColor);
-}
-
-.sub-news .wrapper {
-  flex-direction: column;
-  margin-left: 10px;
-}
-
-.sub-news ul {
-  font-size: 0.6rem;
-  color: var(--gray);
-}
-
-/* Latest deals  */
-
-.news .latest-heading {
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.news .latest-heading > p {
-  margin-top: 25px;
-  font-size: 0.8rem;
-}
-
-.deals ul {
-  color: var(--darkColor);
-  font-size: 0.8rem;
-}
-
-.strike-through {
-  text-decoration: line-through;
-  color: var(--gray);
-  font-size: 0.7rem;
-}
-
-/* Hover styling */
-
-.top-box:hover {
-  cursor: pointer;
-}
-
-.black-hover a:hover {
-  color: var(--darkColor);
-}
-
-.latest-heading a:hover {
-  color: var(--darkColor);
-}
-
-.highlights a:hover,
-.white-hover a:hover,
-.footer-links a:hover {
-  color: var(--whiteColor);
-}
-
-footer .fab:hover,
-footer .fas:hover {
-  background-color: var(--darkColor);
-}
-
-.hover-underline:hover {
-  text-decoration: underline;
-  text-decoration-color: var(--gray);
-}
-
-.news h2:hover,
-.categories h2:hover,
-.latest-heading h2:hover {
-  color: var(--darkColor);
-}
-
 @media screen and (min-width: 600px) {
-  nav a {
-    font-size: 0.6rem;
-  }
-
-  .dark-nav {
-    display: flex;
-    background-color: var(--darkColor);
-    flex-direction: row;
-    justify-content: space-between;
-    padding-bottom: 5px;
-  }
-
-  .white-hover,
-  .black-hover {
-    display: flex;
-  }
-
-  nav .fa-bars,
-  .logo-img {
-    display: none;
-  }
-
-  nav .fa-search {
-    font-size: 0.6rem;
-    padding: 10px;
-  }
-
-  .black-hover {
-    align-items: center;
-  }
-
-  .yellow-nav a {
-    margin: 0;
-  }
-
-  .dark-nav,
-  .white-nav,
-  .yellow-nav {
-    padding-left: 10px;
-  }
-
-  /* Highlights */
-
-  .highlights {
-    flex-direction: row;
-    height: 300px;
-    margin-top: 3px;
-  }
-
-  .sub-container {
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .highlight {
-    margin-right: 10px;
-    font-size: 1rem;
-    height: 250px;
-  }
-
-  .sub-highlight {
-    font-size: 0.5rem;
-    height: 120px;
-  }
-
   .highlight,
   .sub-highlight {
     margin-bottom: 0;
   }
-
-  .highlights h1,
-  .highlights h2 {
-    margin-bottom: 5px;
-  }
-
-  /* Latest funding */
-
+}
+.opal {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), #000000), url(images/phone.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+.google {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), #000000), url(images/account.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+.mac {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), #000000), url(images/duplicate.png);
+  background-size: cover;
+  background-position: center;
+}
+/* Latest funding  */
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.latest {
+  padding: 10px;
+  flex-direction: column;
+}
+.latest-heading {
+  flex-direction: column;
+}
+.latest-heading ul {
+  flex-direction: column-reverse;
+  margin-top: 10px;
+}
+.latest-heading li {
+  padding-bottom: 10px;
+}
+.latest-heading a,
+.latest-heading h2 {
+  color: #f42;
+}
+@media screen and (min-width: 600px) {
   .latest-heading {
     align-items: flex-start;
   }
-
   .latest-heading ul {
     flex-direction: row-reverse;
     margin-top: 10px;
   }
-
   .latest-heading li {
     padding-left: 20px;
     padding-right: 20px;
     height: 1rem;
     margin-bottom: 15px;
   }
-
   .latest-heading #updates {
     border-left: 1px var(--red) solid;
     border-right: 1px var(--red) solid;
   }
-
-  .boxes {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .box {
-    width: 32%;
-  }
-
-  .center-box a,
-  .bottom-box a {
-    font-size: 0.7rem;
-  }
-
-  #third-box {
-    display: block;
-  }
-
-  /* Categories styling */
-
-  .categories {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .category {
-    width: 49%;
-  }
-
-  .categories #second-category {
-    display: flex;
-  }
-
-  .top-category {
-    height: 240px;
-  }
-
-  .bottom-category li {
-    font-size: 0.7rem;
-  }
-
-  /* Latest news styling  */
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-  }
-
-  .sub-news {
-    flex-direction: column;
-  }
-
-  .sub-news h4 {
-    font-size: 0.6em;
-  }
-
-  .news img {
-    height: 110px;
-    width: 100%;
-  }
-
-  .sub-news .wrapper {
-    flex-direction: column;
-    margin-left: 0;
-    margin-top: 5px;
-  }
-
-  .sub-news ul {
-    font-size: 0.6rem;
-    color: var(--gray);
-  }
-
-  /* Latest deals  */
-
-  .sub-news .img-wrapper {
-    position: relative;
-  }
-
-  .triangle {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: var(--darkYellow);
-    z-index: 1;
-    width: 80px;
-    height: 80px;
-    clip-path: polygon(0 0, 100% 100%, 100% 0);
-  }
-
-  .discount {
-    display: block;
-    color: var(--darkColor);
-    transform: rotate(45deg);
-    position: absolute;
-    top: 25px;
-    right: 5px;
-    z-index: 2;
-    font-size: 0.8rem;
-    font-weight: bold;
-  }
-
-  .deals ul {
-    color: var(--darkColor);
-    font-size: 0.8rem;
-  }
 }
-
 @media screen and (min-width: 768px) {
-  /* Highlights  */
-
-  .highlights {
-    height: 550px;
-  }
-
-  .highlight {
-    width: 70%;
-    height: 500px;
-    position: relative;
-  }
-
-  .sub-container {
-    width: 30%;
-    height: 500px;
-  }
-
-  .sub-highlight {
-    height: 245px;
-  }
-
-  .highlight img {
-    display: block;
-    width: 40%;
-    height: auto;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-  }
-
-  .highlight h1 {
-    font-size: 3.1rem;
-    line-height: 3rem;
-  }
-
-  .sub-highlight h2 {
-    font-size: 1.3rem;
-    line-height: 1.3rem;
-  }
-
-  .opal {
-    background-image: linear-gradient(rgba(255, 61, 61, 0.562), rgba(0, 0, 0, 1)), url(images/phone.jpeg);
-  }
-
-  time {
-    display: block;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-
-  /* Latest funding */
   .latest-heading {
     flex-direction: row;
     justify-content: space-between;
   }
-
   .latest-heading ul {
     flex-direction: row;
   }
-
+}
+.box {
+  margin-bottom: 20px;
+}
+.box .top-box {
+  position: relative;
+  height: 100px;
+  background-color: #ffebe7;
+}
+.box .top-box img {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+.box .top-box p {
+  padding-left: 70px;
+  color: #000;
+}
+.box .top-box h4 {
+  padding: 10px 10px 10px 70px;
+  background-color: #f42;
+  color: #fff;
+}
+.box .top-box .value {
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin-top: 10px;
+  line-height: 1.4rem;
+}
+.box .top-box .series {
+  font-size: 0.7rem;
+  line-height: 1.2rem;
+  color: #898888;
+}
+.box .center-box {
+  padding: 10px;
+  flex-direction: column;
+  background-color: #fffaf8;
+}
+.box .center-box a {
+  font-size: 0.8rem;
+  padding: 7px 0;
+  color: #000;
+}
+.box .bottom-box {
+  border-top: 1px solid rgba(255, 68, 34, 0.25);
+  background-color: #fffaf8;
+  padding: 10px;
+}
+.box .bottom-box a {
+  font-size: 0.8rem;
+}
+.box .bottom-box p {
+  color: #000;
+}
+.box .bottom-box span {
+  color: #898888;
+}
+@media screen and (min-width: 600px) {
+  .box {
+    width: 32%;
+  }
+  .box .center-box a,
+  .box .bottom-box a {
+    font-size: 0.7rem;
+  }
+}
+@media screen and (min-width: 768px) {
   .box {
     width: 24%;
   }
-
-  #fourth-box {
-    display: block;
+}
+/* Category styling */
+.categories {
+  margin: 10px;
+}
+.categories img {
+  width: 96px;
+  height: 96px;
+  float: right;
+}
+.categories #second-category,
+.categories #third-category {
+  display: none;
+}
+@media screen and (min-width: 600px) {
+  .categories {
+    flex-direction: row;
+    justify-content: space-between;
   }
-
-  /* Categories styling */
-
+  .categories #second-category {
+    display: flex;
+  }
+}
+@media screen and (min-width: 768px) {
   .categories {
     justify-content: space-between;
   }
-
-  .category {
-    width: 32%;
-  }
-
   .categories #third-category {
     display: flex;
-  }
-
-  .top-category {
-    height: 240px;
-  }
-
-  .top-category h3 {
-    font-size: 1.1rem;
-  }
-
-  .center-category h5 {
-    font-size: 0.75rem;
-  }
-
-  .bottom-category li {
-    font-size: 0.7rem;
-  }
-
-  /* Latest news styling  */
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-  }
-
-  .sub-news h4 {
-    font-size: 0.7em;
-  }
-
-  .news img {
-    height: 130px;
-  }
-
-  .deals h4 {
-    margin-top: 20px;
   }
 }
