--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@ header .fas .fa-bars {
   display: none;
 }
 
+.white-hover a:hover {
+  color: var(--whiteColor);
+}
+
 main {
   margin-top: 90px;
 }
@@ -82,6 +86,48 @@ main {
   flex-direction: column;
   height: 1000px;
   margin: 0 10px;
+}
+.higlights img,
+.higlights time {
+  display: none;
+}
+.higlights .highlight,
+.higlights .sub-highlight {
+  height: 300px;
+  margin-bottom: 10px;
+  flex-direction: column;
+  justify-content: flex-end;
+  color: var(--whiteColor);
+  padding: 15px;
+}
+.higlights h1,
+.higlights h2 {
+  margin-bottom: 20px;
+  color: var(--whiteColor);
+}
+.higlights ul li {
+  margin-right: 10px;
+}
+.higlights a:hover {
+  color: var(--whiteColor);
+}
+
+.opal {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), black), url("images/phone.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+
+.google {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), black), url("images/account.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+
+.mac {
+  background-image: linear-gradient(rgba(255, 255, 255, 0.2), black), url("images/duplicate.jpeg");
+  background-size: cover;
+  background-position: center;
 }
 
 footer {
@@ -109,6 +155,10 @@ footer .fas {
   border-radius: 50%;
   margin-right: 15px;
 }
+footer .fab:hover,
+footer .fas:hover {
+  color: var(--darkColor);
+}
 footer .footer-logo {
   justify-content: center;
   padding: 30px;
@@ -126,6 +176,9 @@ footer .footer-logo p {
   color: var(--gray);
   font-size: 0.6rem;
   margin: 0 5px;
+}
+footer .footer-links a:hover {
+  color: var(--whiteColor);
 }
 
 /*# sourceMappingURL=style.css.map */
